<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoEuro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="endLocation">end location</string>
    <string name="startLocation">start location</string>
    <string name="search">search</string>
    <string name="date">Select a date</string>
    <string name="GoEuro">GoEuro</string>

</resources>