<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/GoEuroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoEuro" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"/>

    <AutoCompleteTextView
        android:id="@+id/startLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/GoEuroText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/startLocation" >
        
    </AutoCompleteTextView>
    
    <AutoCompleteTextView
        android:id="@+id/endLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/startLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/endLocation" >
        
    </AutoCompleteTextView>

    <Button
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endLocation"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
         android:onClick="showDatePickerDialog"
        android:text="@string/date" />
    
    <Button
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GoEuroText"
        android:layout_below="@+id/date"
        android:layout_marginTop="35dp"
        android:text="@string/search" />

    

</RelativeLayout>